--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,5 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=test
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
