--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=test
+spring.datasource.password=example
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
 spring.jpa.show-sql=true
