--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=test
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
