--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=noreply.project22@gmail.com
-spring.mail.password=Project_22
+spring.mail.password=cwrwcpkyfcnjadzk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
