--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://88.214.57.111:5433/postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=example
+#spring.datasource.password=test
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
 spring.jpa.show-sql=true
