--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,6 +5,12 @@ spring.datasource.password=example
 #spring.datasource.password=test
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
+flyway.user=postgres
+flyway.password=example
+flyway.schemas=public
+flyway.url=jdbc:postgresql://88.214.57.111:5433/postgres
+spring.flyway.baseline-on-migrate = true
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -18,3 +24,5 @@ spring.mail.username=noreply.project22@gmail.com
 spring.mail.password=cwrwcpkyfcnjadzk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+host.frontend.baseurl=http://88.214.57.111:3001
