--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,6 +3,12 @@ spring.datasource.username=postgres
 spring.datasource.password=example
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
+flyway.user=postgres
+flyway.password=example
+flyway.schemas=public
+flyway.url=jdbc:postgresql://db:5432/postgres
+spring.flyway.baseline-on-migrate = true
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -16,3 +22,5 @@ spring.mail.username=noreply.project22@gmail.com
 spring.mail.password=cwrwcpkyfcnjadzk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+host.frontend.baseurl=http://88.214.57.111:3000
