--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,6 +3,12 @@ spring.datasource.username=postgres
 spring.datasource.password=example
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
+flyway.user=postgres
+flyway.password=example
+flyway.schemas=public
+flyway.url=jdbc:postgresql://88.214.57.111:5433/postgres
+spring.flyway.baseline-on-migrate = true
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
