--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -22,3 +22,5 @@ spring.mail.username=noreply.project22@gmail.com
 spring.mail.password=cwrwcpkyfcnjadzk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+host.frontend.baseurl=http://88.214.57.111:3001
