--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,8 +1,6 @@
 spring.datasource.url=jdbc:postgresql://88.214.57.111:5433/postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=example
-#spring.datasource.password=test
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 
 flyway.user=postgres
@@ -26,3 +24,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 host.frontend.baseurl=http://88.214.57.111:3001
+
+#Multipart Settings
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
